--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,7 +22,7 @@
 
 
 @font-face {
-  font-family: 'Proba Pro Md';
+  font-family: 'Proba Pro';
   src: url('../fonts/ProbaPro-Medium.eot');
   src: local('../fonts/Proba Pro Medium'), local('../fonts/ProbaPro-Medium'),
     url('../fonts/ProbaPro-Medium.eot?#iefix') format('embedded-opentype'),
