--- a/src/sass/info/MediaQueries/desktopHD.scss
+++ b/src/sass/info/MediaQueries/desktopHD.scss
@@ -1,8 +1,79 @@
 @import '../../mq';
 
 @media #{$desktopHD} {
-    @import '../desktop';
-    & {
+  @import '../desktop';
 
+  & {
+    .cases-container .img-info {
+      position: absolute;
+      margin-left: auto;
     }
+
+    .cases-slider {
+      width: 47vw;
+      float: right;
+      clear: both;
+      margin-right: 40px;
+      position: relative;
+
+      &:after {
+        content: " ";
+        display: table;
+        clear: both;
+      }
+
+      button {
+        background: 0 0;
+        margin: 0;
+        padding: 0;
+        height: inherit;
+        border: 0;
+        position: absolute;
+        cursor: pointer;
+        z-index: 99;
+
+        &:focus {
+          outline: 0;
+        }
+
+        svg {
+          line {
+            transition: .3s;
+          }
+        }
+
+        &:hover {
+          svg {
+            line {
+              stroke: #5016FF;
+            }
+          }
+        }
+
+        &.slick-next {
+          bottom: 98px;
+          right: 20px;
+        }
+
+        &.slick-prev {
+          bottom: 145px;
+          right: 20px;
+        }
+      }
+
+      .img {
+        padding-right: 48px;
+        position: relative;
+        min-height: 26.042vw;
+
+        img {
+          width: 100%;
+          max-width: 845px;
+        }
+
+
+      }
+    }
+
+  }
 }
