--- a/src/sass/info/main.scss
+++ b/src/sass/info/main.scss
@@ -179,11 +179,11 @@ body {
     position: absolute;
     bottom: 0;
     left: 3px;
-	-webkit-animation: jump 1s infinite;
-	-moz-animation: jump 1s infinite;
-	-o-animation: jump 1s infinite;
-	-ms-animation: jump 1s infinite;
-	animation: jump 1s infinite;
+	-webkit-animation: jump 2s infinite;
+	-moz-animation: jump 2s infinite;
+	-o-animation: jump 2s infinite;
+	-ms-animation: jump 2s infinite;
+	animation: jump 2s infinite;
   }
 }
 /* Animations */
@@ -355,7 +355,7 @@ body {
     &:before {
       content: "";
       position: absolute;
-      height: 872px;
+      height: 44vw;
       width: 1px;
       background: #D6D6D6;
       left: 200px;
@@ -632,7 +632,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
       margin-bottom: 0;
       font-weight: 400;
     }
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     &:before {
       counter-increment: list;
       content: "0"counter(list);
@@ -1075,6 +1075,7 @@ color: #7B7B7B;
       transition: .3s;
     }
     &:hover {
+      color: #5016FF;
       svg {
         line {
           stroke: #5016FF;
@@ -1283,7 +1284,7 @@ padding-left: 35px;
   iframe {
     max-width: 670px;
     width: 100%;
-    height: 410px;
+    height: 442px;
     filter: grayscale(100%);
   }
 }
@@ -1417,7 +1418,7 @@ color: #8C8C8C;
     align-items: center;
     -ms-flex-pack: center;
     justify-content: left;
-  margin-top: -30px;
+  margin-top: -20px;
 }
 
 .mess-link {
@@ -1515,7 +1516,7 @@ color: #8C8C8C;
   &:hover {
     svg {
       path {
-        fill: #b39c72;
+        fill: #5016FF;
       }
     }
   }
@@ -1538,7 +1539,7 @@ color: #8C8C8C;
       display: block;
       font-style: normal;
       font-weight: 600;
-      font-size: 12px;
+      font-size: 14px;
       line-height: 1;
       letter-spacing: 0.1em;
       color: #65666A;
