--- a/src/sass/info/mobile.scss
+++ b/src/sass/info/mobile.scss
@@ -77,7 +77,7 @@
   }
 
   .xs-none {
-    display: none;
+    display: none !important;
   }
 
   .xs-block {
@@ -86,6 +86,7 @@
 
   .head-item h1 {
     font-size: 27px;
+    margin-bottom: 40px;
   }
 
   .head-item [href="#next"] {
@@ -104,7 +105,31 @@
     li {
       display: block;
       margin-bottom: 20px;
+
+      .mess-link {
+        margin: 40px auto 0;
+        padding: 0;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-align: center;
+        align-items: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        max-width: 215px;
+
+        li {
+          margin-bottom: 0;
+          padding: 0;
+        }
+
+      }
     }
+  }
+
+  .head:before {
+    width: 100%;
+    height: 32.115vw;
+
   }
 
   .nav {
@@ -204,7 +229,7 @@
 
   .next-btn {
     font-size: 21px;
-    line-height: 48px;
+    line-height: 25px;
   }
 
   .cases .h2-title {
@@ -217,11 +242,12 @@
 
   .cases-before {
     padding-left: 0;
-    text-align: center;
+    text-align: left;
+    display: inline-block;
   }
 
   .cases-before .before-desc {
-    right: -82px;
+    right: -110px;
   }
 
   .cases-slider {
@@ -354,7 +380,7 @@
   }
 
   .offers-arr {
-    margin-top: 40px;
+    margin-top: 0px;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: justify;
@@ -403,43 +429,96 @@
     margin-top: 35px;
     justify-content: center;
   }
+
   .footer {
     text-align: center;
   }
+
   .footer-item {
     margin-top: 30px;
+
     svg {
-    margin-left: auto;
-    margin-right: auto;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
-  }
+
   .text-right {
     text-align: center;
+
     .call-me {
       margin-top: 30px;
       display: inline-block;
     }
   }
+
   .footer_bottom {
     text-align: center;
     padding: 40px 0;
   }
+
   .footer_bottom-list li {
     display: block;
     margin-right: 0;
     margin-bottom: 20px;
   }
+
   .container {
     max-width: 480px;
   }
+
   .article_1 .container:before {
     display: none;
   }
+
   .article_3-svg {
     text-align: center;
   }
+
   .fancybox-slide {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .cases-before img {
+    max-width: 34.667vw;
+    width: 100%;
+  }
+
+  .cases-before {
+    margin-bottom: 40px;
+  }
+
+  .cases-before .before-desc,
+  .cases-container .img-desc {
+    position: static;
+    transform: none;
+  }
+  .item-main {
+    .row {
+      margin: 0 -12px;
+    }
+  }
+  .cases-slider .img {
+    padding-right: 0;
+  }
+
+  .cases-slider button {
+    width: 27px;
+    padding: 5px;
+    background: #fff;
+  }
+  
+  .order-btn {
+        padding: 16px 60px;
+
+  }
+  .next-btn svg {
+    margin-left: 20px;
+    height: 25px;
+}
+  .offers-arr li svg {
+    width: 40px;
+    height: 30px;
   }
 }
